<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/sign_up_btn_back_v"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/ic_back_arrow_black"
        app:layout_constraintBottom_toTopOf="@id/sign_up_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/sign_up_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nanumgothic_extrabold"
        android:text="@string/mowa_register"
        android:textAppearance="@style/mowa_green_color_text"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/sign_up_description_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_btn_back_v" />

    <TextView
        android:id="@+id/sign_up_description_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nanumgothic"
        android:text="@string/mowa_registerpage_register_text"
        android:textAppearance="@style/mowa_black_color_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/sign_up_email_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_title_tv" />

    <!-- 이메일 -->
    <TextView
        android:id="@+id/sign_up_email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nanumgothic"
        android:text="@string/mowa_email"
        android:textAppearance="@style/mowa_black_color_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/sign_up_email_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_description_tv" />

    <EditText
        android:id="@+id/sign_up_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_empty_btn_green"
        android:fontFamily="@font/nanumgothic"
        android:hint="@string/mowa_email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="45dp"
        android:paddingEnd="15dp"
        android:textAppearance="@style/mowa_hint_text"
        app:layout_constraintBottom_toTopOf="@id/sign_up_name_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_email_tv" />

    <View
        android:id="@+id/sign_up_email_logo_v"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_at_sign_green"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_email_et"
        app:layout_constraintStart_toStartOf="@id/sign_up_email_et"
        app:layout_constraintTop_toTopOf="@id/sign_up_email_et" />

    <!-- 이름 -->
    <TextView
        android:id="@+id/sign_up_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nanumgothic"
        android:text="@string/mowa_name"
        android:textAppearance="@style/mowa_black_color_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/sign_up_name_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_email_et" />

    <EditText
        android:id="@+id/sign_up_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_empty_btn_green"
        android:fontFamily="@font/nanumgothic"
        android:hint="@string/mowa_name_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="45dp"
        android:paddingEnd="15dp"
        android:textAppearance="@style/mowa_hint_text"
        app:layout_constraintBottom_toTopOf="@id/sign_up_password_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_name_tv" />

    <View
        android:id="@+id/sign_up_name_logo_v"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_person_green"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_name_et"
        app:layout_constraintStart_toStartOf="@id/sign_up_name_et"
        app:layout_constraintTop_toTopOf="@id/sign_up_name_et" />

    <!-- 비밀번호 -->
    <TextView
        android:id="@+id/sign_up_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nanumgothic"
        android:text="@string/mowa_password"
        android:textAppearance="@style/mowa_black_color_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/sign_up_password_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_name_et" />

    <EditText
        android:id="@+id/sign_up_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_empty_btn_green"
        android:hint="@string/mowa_password_hint"
        android:inputType="textPassword"
        android:paddingStart="45dp"
        android:paddingEnd="15dp"
        android:textAppearance="@style/mowa_hint_text"
        app:layout_constraintBottom_toTopOf="@id/sign_up_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_password_tv" />

    <View
        android:id="@+id/sign_up_password_logo_v"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_lock_green"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_password_et"
        app:layout_constraintStart_toStartOf="@id/sign_up_password_et"
        app:layout_constraintTop_toTopOf="@id/sign_up_password_et" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_btn_gray"
        android:fontFamily="@font/nanumgothic_extrabold"
        android:text="@string/mowa_register"
        android:textAppearance="@style/mowa_white_color_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/sign_up_title_login_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_password_et" />

    <TextView
        android:id="@+id/sign_up_title_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/mowa_already_member"
        android:textAppearance="@style/mowa_black_color_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sign_up_login_tv"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_btn" />

    <TextView
        android:id="@+id/sign_up_login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nanumgothic_extrabold"
        android:text="@string/mowa_go_to_login"
        android:textAppearance="@style/mowa_green_color_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_title_login_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sign_up_title_login_tv"
        app:layout_constraintTop_toTopOf="@id/sign_up_title_login_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>