<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/login_btn_back_v"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/ic_back_arrow_black"
        app:layout_constraintBottom_toTopOf="@id/login_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/login_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nanumgothic_extrabold"
        android:text="@string/mowa_login"
        android:textAppearance="@style/mowa_green_color_text"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/login_welcome_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_btn_back_v" />

    <TextView
        android:id="@+id/login_welcome_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nanumgothic"
        android:text="@string/mowa_loginpage_welcome"
        android:textAppearance="@style/mowa_black_color_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/login_email_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title_tv" />

    <TextView
        android:id="@+id/login_email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nanumgothic"
        android:text="@string/mowa_email"
        android:textAppearance="@style/mowa_black_color_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/login_email_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_welcome_tv" />

    <EditText
        android:id="@+id/login_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_empty_btn_green"
        android:fontFamily="@font/nanumgothic"
        android:hint="@string/mowa_email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="45dp"
        android:paddingEnd="15dp"
        android:textAppearance="@style/mowa_hint_text"
        app:layout_constraintBottom_toTopOf="@id/login_password_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_tv" />

    <View
        android:id="@+id/login_email_logo_v"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_at_sign_green"
        app:layout_constraintBottom_toBottomOf="@id/login_email_et"
        app:layout_constraintStart_toStartOf="@id/login_email_et"
        app:layout_constraintTop_toTopOf="@id/login_email_et" />

    <TextView
        android:id="@+id/login_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nanumgothic"
        android:text="@string/mowa_password"
        android:textAppearance="@style/mowa_black_color_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/login_password_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_et" />

    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_empty_btn_green"
        android:hint="@string/mowa_password_hint"
        android:inputType="textPassword"
        android:paddingStart="45dp"
        android:paddingEnd="15dp"
        android:textAppearance="@style/mowa_hint_text"
        app:layout_constraintBottom_toTopOf="@id/login_find_password_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_tv" />

    <View
        android:id="@+id/login_password_logo_v"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_lock_green"
        app:layout_constraintBottom_toBottomOf="@id/login_password_et"
        app:layout_constraintStart_toStartOf="@id/login_password_et"
        app:layout_constraintTop_toTopOf="@id/login_password_et" />

    <TextView
        android:id="@+id/login_find_password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nanumgothic_bold"
        android:text="@string/mowa_loginpage_forget_password"
        android:textAlignment="viewEnd"
        android:textColor="#0AA66D"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/login_error_message_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_et" />

    <TextView
        android:id="@+id/login_error_message_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/nanumgothic_extrabold"
        android:gravity="center"
        android:text="@string/mowa_loginpage_error_msg"
        android:textAppearance="@style/mowa_error_text"
        android:textSize="13sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_find_password_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_btn_green"
        android:fontFamily="@font/nanumgothic_bold"
        android:text="@string/mowa_login"
        android:textAppearance="@style/mowa_white_color_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_error_message_tv"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>